# VP_PHONE_DATABASE

./: README.md
Client/: CMakeLists.txt  main.cpp
Client/include/: BaseSession.h  Client.h  Fsm.h  Options.h
Client/src/: Client.cpp
Server/: CMakeLists.txt  main.cpp
Server/include/: ClientForServer.h  Server.h
Server/src/: Server.cpp
